tests/e2e/pass/m35_shift_count_negative.ep
# EXIT: 1
fun main(): void {
    let value = 1 << (0 - 1)
    os.ExitProcess(0)
}
