tests/e2e/fail/integer_literal_u8_range.ep
# COMPILE_ERROR: integer literal is out of range for u8
fun main(): void {
    let value = 256u8
}
